--- a/frontend/src/mainpages/cart/Cart.css
+++ b/frontend/src/mainpages/cart/Cart.css
@@ -106,7 +106,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    color: #ff6b6b;
+    color: #000000;
     font-weight: bold;
     font-size: 1.8rem;
     cursor: pointer;
@@ -114,7 +114,7 @@
 }
 
 .delete:hover {
-    color: #ff4c4c;
+    color: #ff0000;
 }
 
 /* Total Section */
