--- a/frontend/src/mainpages/products/Product.css
+++ b/frontend/src/mainpages/products/Product.css
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     justify-items: center;
-    margin: 10px 0;
+    /* margin: 10px 0; */
 }
 
 
